# ros-repo-2

./:    .env  .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  README.md  cheatsheet.md  docker-compose.yml  requirements.txt
device/shoppinkki/shoppinkki_core/: package.xml
device/shoppinkki/shoppinkki_nav/: package.xml
docs/: admin_ui.md  behavior_tree.md  customer_ui.md  erd.md  erd_drawio.xml  erd_review.md  implementation_plan.md  interface_specification.md  map.md  multi_robot_rmf_progress.md  pinky_pro_spec.md  rmf_fleet_adapter.md  scaffold_plan.md  state_machine.md  system_architecture.md  system_requirements.md  user_requirements.md
docs/scenarios/: SC-01.md  SC-02.md  SC-03.md  SC-04.md  SC-10.md  SC-11.md  SC-20.md  SC-21.md  SC-22.md  SC-23.md  SC-30.md  SC-31.md  SC-40.md  SC-41.md  SC-50.md  SC-51.md  SC-52.md  SC-60.md  SC-61.md  SC-62.md  SC-63.md  SC-70.md  SC-71.md  SC-80.md  SC-81.md  SC-82.md  index.md  scenario_08.md  scenario_14.md  scenario_17.md
presentation/: index.html
presentation/css/: theme.css
presentation/js/: main.js
presentation/slides/: 01-title.html  02-shopping-time.html  03-problem.html  04-we-came.html  05-shoppinkki-reveal.html  06-solution.html  07-idea.html  08-ux.html  09-hardware-intro.html  10-robot.html  11-doll.html  12-doll-25000.html  13-system-intro.html  14-architecture.html  15-techstack.html  16-structure-overview.html  17-structure-device.html  18-structure-interface.html  19-structure-mainnode.html  20-structure-server.html  21-statemachine.html  22-demoenv-intro.html  23-environment.html  24-zones.html  25-simmap.html  26-features.html  27-intro-login.html  28-login-1.html  28a-tracking-iou.html  29-login-2.html  30-login-3.html  31-login-4.html  32-intro-tracking.html  33-tracking.html  34-tracking-yolo.html  35-tracking-bytetracker.html  35-tracking-reid.html  36-tracking-reid-intro.html  37-tracking-demo.html  38-guide-llm.html  (+23 more)
scripts/: .zshrc.pinky  _ros_env.sh  fastdds_unicast.xml  remove_audio.sh  rmf_dispatch.py  run_robot.sh  run_server.sh  run_sim.sh  seed.sh  test_nav.sh  traffic_editor.sh  visualize_nav_graph.py
scripts/db/: fill_product_embeddings.py  schema.sql  seed_data.sql
scripts/hooks/: precommit_session_gate.sh
server/ai_service/llm/: llm_server.py
server/control_db/: schema.sql  seed_data.sql
server/control_service/control_service/: db.py  fleet_router.py  main.py  rest_api.py  robot_manager.py  ros_node.py  tcp_server.py
server/control_service/test/: test_db.py  test_fleet_router.py  test_rest_api_session.py  test_robot_manager.py
server/customer_web/: app.py  control_client.py  socket_handlers.py
server/customer_web/templates/: llm_test.html  main.html
server/shoppinkki_rmf/: setup.py
server/shoppinkki_rmf/config/: fleet_config.yaml
server/shoppinkki_rmf/launch/: rmf_fleet.launch.py
server/shoppinkki_rmf/maps/: shop.building.yaml  shop_nav_graph.yaml
server/shoppinkki_rmf/shoppinkki_rmf/: building_map_publisher.py  fleet_adapter.py  navgraph_marker_publisher.py  task_dispatcher.py
server/shoppinkki_rmf/test/: test_robot_command_handle.py
services/ai_server/: docker-compose.yml
services/ai_server/llm/: Dockerfile  llm_server.py  requirements.txt
services/ai_server/yolo/: Dockerfile  requirements.txt  yolo_server.py
services/customer_web/: app.py  config.py  control_client.py  socket_handlers.py  tcp_client.py  ws_handler.py
services/customer_web/routes/: auth.py  cart.py  main.py
services/customer_web/templates/: base.html  blocked.html  cart.html  login.html  main.html  pose_scan.html  register.html
src/pinky_pro/: README.md
src/pinky_pro/pinky_gz_sim/: CMakeLists.txt  package.xml
src/pinky_pro/pinky_gz_sim/launch/: launch_sim.launch.xml  launch_sim_shop.launch.xml
src/pinky_pro/pinky_gz_sim/models/shop/: model.config  model.sdf
src/pinky_pro/pinky_gz_sim/models/shop/meshes/: shop.dae
src/pinky_pro/pinky_gz_sim/params/: pinky_bridge.yaml
src/pinky_pro/pinky_gz_sim/plugins/: gz_lamp_control_plugin.cpp  gz_lamp_control_plugin.hpp
src/pinky_pro/pinky_gz_sim/worlds/: default.sdf  empty.world  pinky_factory.world  pinky_map.world  shop.world
src/pinky_pro/pinky_imu_bno055/: CMakeLists.txt  package.xml
src/pinky_pro/pinky_imu_bno055/src/: main_node.cpp
src/shoppinkki/shoppinkki_interfaces/: package.xml  setup.py
src/shoppinkki/shoppinkki_interfaces/shoppinkki_interfaces/: mocks.py  protocols.py
src/shoppinkki/shoppinkki_nav/: package.xml  setup.py
src/shoppinkki/shoppinkki_nav/config/: keepout_mask.yaml  nav2_params.yaml  nav2_params_robot_18.yaml  nav2_params_robot_54.yaml
src/shoppinkki/shoppinkki_nav/launch/: gz_multi_robot.launch.py  multi_robot_rviz.launch.py  navigation.launch.py
src/shoppinkki/shoppinkki_nav/maps/: shop.pgm  shop.yaml
src/shoppinkki/shoppinkki_nav/rviz/: multi_robot_view.rviz
src/shoppinkki/shoppinkki_nav/shoppinkki_nav/: boundary_monitor.py  bt_tracking.py
src/shoppinkki/shoppinkki_nav/shoppinkki_nav/bt/: bt_guiding.py  bt_returning.py  bt_waiting.py
src/shoppinkki/shoppinkki_nav/test/: test_boundary_monitor.py  test_bt_guiding.py
(+176 files in other folders)
